@@ -1,7 +1,9 @@
 package com.beautysalon.user;
 
 
+import com.beautysalon.activity.Activity;
 import com.beautysalon.address.Address;
+import com.beautysalon.common.BaseEntity;
 import com.beautysalon.role.Role;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
@@ -16,60 +18,33 @@ import java.util.stream.Collectors;
 public class UserService {
 
     private final UserRepository userRepository;
+    private final UserMapper mapper;
 
     public UserResponse findById(Long id) {
         User user = userRepository.findById(id).orElseThrow(() -> new NullPointerException("No User Found"));
-
-        return UserResponse.builder()
-                .id(user.getId())
-                .firstName(user.getFirstName())
-                .lastName(user.getLastName())
-                .phoneNumber(user.getPhoneNumber())
-                .roles(user.getRoleList().stream().map(Role::getId).collect(Collectors.toList()))
-                .addresses(user.getAddresses().stream().map(Address::getId).collect(Collectors.toList()))
-                .build();
+        return mapper.map(user);
     }
 
     public List<UserResponse> findAll() {
         List<User> users = userRepository.findAll();
-
-        return users.stream().map(user -> UserResponse.builder()
-                .firstName(user.getFirstName())
-                .lastName(user.getLastName())
-                .email(user.getEmail())
-                .phoneNumber(user.getPhoneNumber())
-                .roles(user.getRoleList().stream().map(Role::getId).collect(Collectors.toList()))
-                .addresses(user.getAddresses().stream().map(Address::getId).collect(Collectors.toList()))
-                .build()).toList();
+        return users.stream().map(mapper::map).collect(Collectors.toList());
     }
 
-    public List<UserResponse> findByAuthority(String role) {
-        List<User> userList = userRepository.findAll();
-        List<UserResponse> result = new ArrayList<>();
-        userList.forEach(user -> user.getRoleList().forEach(a-> {
-                if(a.getName().equals(role)){
-                    result.add(
-                            UserResponse.builder()
-                                    .id(user.getId())
-                                    .firstName(user.getFirstName())
-                                    .lastName(user.getLastName())
-                                    .phoneNumber(user.getPhoneNumber())
-                                    .build()
-                    );
-                }
-                }));
-        return result;
-    }
+//    public List<UserResponse> findByRole(String role) {
+//        List<User> userList = userRepository.findAll();
+//        List<UserResponse> result = new ArrayList<>();
+////        userList.forEach(user -> user.getRoleList().forEach(a-> {
+////                if(a.getName().equals(role)){
+////                    result.add(mapper.map(user));
+////                }
+////                }));
+//        return result;
+//    }
 
     public UserResponse findByUser(Authentication connectedUser) {
         User user = (User) connectedUser.getPrincipal();
         User savedUser = userRepository.findById(user.getId()).orElseThrow(()->new NullPointerException("No User Found"));
-        return UserResponse.builder()
-                .firstName(savedUser.getFirstName())
-                .lastName(savedUser.getLastName())
-                .email(savedUser.getEmail())
-                .phoneNumber(savedUser.getPhoneNumber())
-                .build();
+        return mapper.map(savedUser);
     }
 
     public List<Long> findAddressIdsList(Authentication connectedUser) {
